# akita

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CONSTANT_TIME_NOTES.md  CONTRIBUTING.md  Cargo.toml  HACHI_PROGRESS.md  HACHI_SIS_ESTIMATION.md  K64_EXACT_CHALLENGE_FAMILY.md  LABRADOR_LINEAR_ONLY.md  LATTICEFOLD_PLUS_NORM_CHECK.md  LICENSE  LICENSE-APACHE  LOWERING_TO_D64.md  ML_KEM_ML_DSA_ESTIMATOR_MAPPING.md  NIST_STYLE_SECURITY_CHECKLIST.md  NTT_PRIME_ANALYSIS.md  ONEHOT_PROOF_SIZE_OPTIMUM.md  OPTIMIZATION_REPORT.md  PO-CUTOVER-WORKLOG-NEVER-COMMIT.md  README.md  RELATION-WEIGHT-KERNEL-WORKLOG-NEVER-COMMIT.md  SECURITY.md  SHARED_PREFIX_BINDING.md  STACK.md  SYMPHONY_NORM_CHECK.md  WORKLOG-NEVER-COMMIT.md  Y-RING-TRACE-IMPLEMENTATION-HANDOFF-NEVER-COMMIT.md  Y-RING-TRACE-WORKLOG-NEVER-COMMIT.md  akita-zk-commitment-hiding-proof.md  akita-zk-unified.md  audit.md  deny.toml  pr-155-review-findings.md  rust-toolchain.toml  typos.toml
crates/akita-algebra/: Cargo.toml
crates/akita-algebra/src/: eq_poly.rs  hypercube.rs  lib.rs  module.rs  offset_eq.rs  poly.rs  split_eq.rs  uni_poly.rs
crates/akita-challenges/: Cargo.toml
crates/akita-challenges/benches/: jl_mle.rs  jl_projection.rs  op_norm_rejection.rs  sparse_challenge.rs
crates/akita-challenges/src/: bounded_l1.rs  challenge.rs  config.rs  fold_draw.rs  grind_probe.rs  lib.rs  rejection.rs  sparse.rs  sparse_challenge.rs  stage1.rs  tensor.rs
crates/akita-challenges/tests/: sparse_challenge.rs  xof_rejection_timing.rs
crates/akita-config/: Cargo.toml
crates/akita-config/examples/: schedule_sizes.rs
crates/akita-config/src/: bare.rs  claim_reduction.rs  conservative_commitment.rs  conservative_rank.rs  descriptor_policy.rs  fast_verifier.rs  generated_families.rs  lib.rs  matrix_envelope.rs  multi_group_batch.rs  precommitted_commitment.rs  proof_optimized.rs  recursive_commitment.rs  schedule_policy.rs  schedule_selection.rs  setup_prefix_slots.rs  sis_policy.rs  tensor_verifier.rs  test_support.rs  transcript_binding.rs  verifier_adapter.rs  verifier_policy.rs
crates/akita-config/tests/: basis_envelope.rs  commitment_group_layout_probe.rs  fp32_dense_planner_diag.rs  generated_tables.rs  ladder_byte_model.rs  ladder_diagnostics.rs  ladder_fp32_debug.rs  ladder_fp32_onehot.rs  proof_size_comparison.rs  regen_diff.rs  root_log_basis_all_families.rs  root_log_basis_sweep.rs  runtime_fallback.rs  schedule_catalog_feature_off.rs  schedule_catalog_miswire.rs  tiered_planner.rs
crates/akita-derive/: Cargo.toml
crates/akita-derive/src/: derivation.rs  lib.rs  materialize.rs
crates/akita-error/: Cargo.toml
crates/akita-error/src/: lib.rs
crates/akita-field/: Cargo.toml
crates/akita-field/src/: arithmetic.rs  error.rs  fft.rs  jolt_traits.rs  lib.rs  op_counter.rs  parallel.rs  traits.rs
crates/akita-jolt-glue/: Cargo.toml
crates/akita-jolt-glue/src/: lib.rs
crates/akita-metal/: Cargo.toml  README.md
crates/akita-metal/benches/: fp128_vector.rs
crates/akita-metal/examples/: fp128_vector.rs
crates/akita-metal/src/: device.rs  error.rs  lib.rs
crates/akita-pcs/: Cargo.toml
crates/akita-pcs/benches/: akita_e2e.rs  crt_ntt_kernels.rs  digit_range.rs  digit_range_allocations.rs  extension_opening_reduction.rs  fft_smooth.rs  field_arith.rs  fp64_reduce_probe.rs  ntt_matvec.rs  onehot_batched_commit.rs  onehot_batched_opening.rs  onehot_root_projection_commit.rs  relation_matrix_eval.rs  ring_ntt.rs  root_kernels.rs  setup_contribution_scan.rs  setup_index_weight.rs  sparse_challenge.rs
crates/akita-pcs/examples/: codegen_probe_special.rs  eval_at_point_playground.rs  fold_linf_stats.rs  fold_linf_stats_report.rs  jolt_artifact.rs  portable_bench.rs  profile.rs  recursive_setup.rs  tiered_bench.rs  transcript_schedule.rs
crates/akita-pcs/src/: commitment_scheme.rs  lib.rs  ring_switch.rs  setup.rs  test_support.rs
crates/akita-pcs/tests/: akita_e2e.rs  algebra.rs  batched_aggregated_e2e.rs  commitment_contract.rs  default_stack_repro.rs  digit_range_protocol_epoch.rs  distributed_setup_offload_e2e.rs  fold_f1_oracle.rs  fold_linf.rs  fold_linf_zk.rs  fold_protocol_epoch.rs  heterogeneous_prove_e2e.rs  hybrid_stage1_e2e.rs  integration_test_suite.rs  integration_tests_suite.rs  label_schedule.rs  mixed_backend_stack.rs  mixed_d_geometry_crosscheck.rs  mixed_d_per_level_e2e.rs  mixed_d_per_level_fixture.rs  mixed_role_e2e.rs  multi_group_commit.rs  multipoint_batched_e2e.rs  per_handle_lp.rs  primality.rs  protocol_regression_vectors.rs  recursive_multi_claim.rs  recursive_setup_e2e.rs  ring_switch.rs  setup.rs  setup_claim_reduction_e2e.rs  single_poly_e2e.rs  single_poly_tensor_e2e.rs  sparse_challenge.rs  stage1_f1_oracle.rs  stage1_roundtrip.rs  sumcheck_core.rs  sumcheck_prover_driver.rs  tensor_stage1_e2e.rs  tiered_e2e.rs  (+9 more)
crates/akita-planner/: Cargo.toml  README.md
crates/akita-planner/src/: ajtai_params.rs  baseline.rs  catalog_identity.rs  compression.rs  derivation.rs  generated_families.rs  group_batch.rs  ladder_byte_model.rs  lib.rs  materialize.rs  proof_size.rs  proof_size_estimator.rs  resolve.rs  schedule_params.rs  search.rs  setup_capacity.rs  sis_security.rs  (+2 more)
crates/akita-protocol/: Cargo.toml
crates/akita-prover/: Cargo.toml
crates/akita-r1cs/: Cargo.toml
crates/akita-schedules/: Cargo.toml
crates/akita-scheme/: Cargo.toml
crates/akita-serialization/: Cargo.toml
crates/akita-setup/: Cargo.toml
crates/akita-sis-estimator/: Cargo.toml
crates/akita-sumcheck/: Cargo.toml
crates/akita-transcript/: Cargo.toml  README.md
crates/akita-types/: Cargo.toml
crates/akita-verifier/: Cargo.toml
crates/akita-verifier-legacy/: Cargo.toml
crates/akita-witness/: Cargo.toml
crates/akita-zk/: Cargo.toml
crates/jolt-akita-verifier/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: proof_shapes.rs  serialization_vec.rs  transcript_labels.rs
planner/: Cargo.toml
planner/src/: baseline.rs  digit_math.rs  lib.rs  main.rs  proof_size.rs  search.rs  sis_security.rs
profile/akita-recursion/: Cargo.toml  README.md  trusted_benchmark_build.rs
(+1616 files in other folders)
