[workspace]
members = [
    "crates/akita-algebra",
    "crates/akita-challenges",
    "crates/akita-config",
    "crates/akita-field",
    "crates/akita-jolt-glue",
    "crates/akita-pcs",
    "crates/akita-scheme",
    "crates/akita-serialization",
    "crates/akita-setup",
    "crates/akita-sumcheck",
    "crates/akita-transcript",
    "crates/akita-types",
    "crates/akita-verifier",
    "crates/akita-prover",
    "crates/akita-planner",
]
exclude = [
    "crates/jolt-akita-verifier",
    "crates/jolt-akita-verifier/guest",
]
resolver = "2"
