[workspace]
members = [
    "crates/akita-algebra",
    "crates/akita-challenges",
    "crates/akita-config",
    "crates/akita-field",
    "crates/akita-pcs",
    "crates/akita-scheme",
    "crates/akita-serialization",
    "crates/akita-setup",
    "crates/akita-sumcheck",
    "crates/akita-transcript",
    "crates/akita-types",
    "crates/akita-verifier",
    "crates/akita-prover",
    "crates/akita-planner",
    "crates/akita-zk",
]
# `profile/akita-recursion/` is a standalone sub-workspace: it pins its own
# `rust-toolchain.toml` (channel 1.94 + RISC-V targets) and applies Jolt's
# `[patch.crates-io]` overrides for `arkworks-algebra`. Keep it out of this
# workspace's resolution graph.
exclude = ["profile/akita-recursion"]
resolver = "2"
