[package]
name = "akita-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
jolt-field = { version = "=0.1.0", git = "https://github.com/Acentelles/jolt.git", rev = "09b2f7b6ddd9427c756b781c39530a6c005e332d", default-features = false, features = ["solinas"] }
akita-serialization = { path = "../crates/akita-serialization" }
akita-transcript = { path = "../crates/akita-transcript" }
akita-types = { path = "../crates/akita-types" }
libfuzzer-sys = "0.4.12"

[[bin]]
name = "serialization_vec"
path = "fuzz_targets/serialization_vec.rs"
test = false
doc = false
bench = false

[[bin]]
name = "transcript_labels"
path = "fuzz_targets/transcript_labels.rs"
test = false
doc = false
bench = false

[[bin]]
name = "proof_shapes"
path = "fuzz_targets/proof_shapes.rs"
test = false
doc = false
bench = false
