[package]
name = "hachi-planner"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Omid Bodaghi <omibo@layerzero.foundation>"]
license = "Apache-2.0 OR MIT"
description = "Proof-size parameter planner for the Hachi polynomial commitment scheme"
repository = "https://github.com/LayerZero-Labs/hachi"

[dependencies]

[[bin]]
name = "hachi-planner"
path = "src/main.rs"
