[package]
name = "akita-algebra"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
authors = [
    "Markos Georghiades <mgeorghiades@a16z.com>",
    "Quang Dao <qvd@andrew.cmu.edu>",
    "Amirhossein Khajehpour <amir.kh@layerzerolabs.org>",
    "Omid Bodaghi <omibo@layerzero.foundation>",
    "Giuseppe Vitto <giuseppe.vitto@layerzerolabs.org>",
]
license = "Apache-2.0 OR MIT"
description = "Algebra backends for the Akita polynomial commitment scheme"
repository = "https://github.com/a16z/hachi"
readme = "../../README.md"

[dependencies]
akita-field = { version = "0.1.0", path = "../akita-field" }
akita-serialization = { version = "0.1.0", path = "../akita-serialization" }
rand_core = { version = "0.6", features = ["getrandom"] }
rayon = { version = "1.10", optional = true }
tracing = "0.1"

[dev-dependencies]
rand = "0.8"

[features]
default = []
parallel = ["dep:rayon", "akita-field/parallel"]

[lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"

[lints.clippy]
missing_errors_doc = "warn"
missing_panics_doc = "warn"
