[package]
name = "akita-algebra"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
authors = [
  "Markos Georghiades <mgeorghiades@a16z.com>",
  "Quang Dao <qvd@andrew.cmu.edu>",
  "Amirhossein Khajehpour <amir.kh@layerzerolabs.org>",
  "Omid Bodaghi <omibo@layerzero.foundation>",
  "Giuseppe Vitto <giuseppe.vitto@layerzerolabs.org>",
]
license = "Apache-2.0 OR MIT"
description = "Algebra backends for the Akita polynomial commitment scheme"
repository = "https://github.com/LayerZero-Labs/akita"
readme = "../../README.md"

[dependencies]
jolt-field = { version = "=0.1.0", git = "https://github.com/Acentelles/jolt.git", rev = "09b2f7b6ddd9427c756b781c39530a6c005e332d", default-features = false, features = ["solinas"] }
akita-error = { version = "0.1.0", path = "../akita-error" }
akita-serialization = { version = "0.1.0", path = "../akita-serialization" }
rand_core = { version = "0.6", features = ["getrandom"] }
rayon = { version = "1.10", optional = true }
tracing = "0.1"

[dev-dependencies]
rand = "0.8"

[features]
default = []
parallel = ["dep:rayon", "jolt-field/parallel"]

[lints]
workspace = true
