[package]
name = "akita-challenges"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
authors = [
  "Markos Georghiades <mgeorghiades@a16z.com>",
  "Quang Dao <qvd@andrew.cmu.edu>",
  "Amirhossein Khajehpour <amir.kh@layerzerolabs.org>",
  "Omid Bodaghi <omibo@layerzero.foundation>",
  "Giuseppe Vitto <giuseppe.vitto@layerzerolabs.org>",
]
license = "Apache-2.0 OR MIT"
description = "Challenge sampling for the Akita polynomial commitment scheme"
repository = "https://github.com/LayerZero-Labs/akita"
readme = "../../README.md"

[dependencies]
akita-algebra = { version = "0.1.0", path = "../akita-algebra" }
akita-field = { version = "0.1.0", path = "../akita-field" }
akita-transcript = { version = "0.1.0", path = "../akita-transcript" }
sha3 = "0.10.8"
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
akita-types = { version = "0.1.0", path = "../akita-types" }

[[bench]]
name = "sparse_challenge"
harness = false

[[bench]]
name = "jl_projection"
harness = false

[[bench]]
name = "jl_mle"
harness = false

[[bench]]
name = "op_norm_rejection"
harness = false

[features]
default = []
parallel = ["akita-field/parallel"]
jl-test-fixtures = []

[lints]
workspace = true
