[package]
name = "akita-config"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
authors = [
  "Markos Georghiades <mgeorghiades@a16z.com>",
  "Quang Dao <qvd@andrew.cmu.edu>",
  "Amirhossein Khajehpour <amir.kh@layerzerolabs.org>",
  "Omid Bodaghi <omibo@layerzero.foundation>",
  "Giuseppe Vitto <giuseppe.vitto@layerzerolabs.org>",
]
license = "Apache-2.0 OR MIT"
description = "Runtime configuration presets and schedule policy for the Akita polynomial commitment scheme"
repository = "https://github.com/LayerZero-Labs/akita"
readme = "../../README.md"

[features]
default = ["schedules-default"]
test-support = []
schedules-default = [
  "schedules-fp128-d64-onehot",
  "schedules-fp128-d64-full",
  "schedules-fp128-d128-onehot",
  "schedules-fp128-d128-full",
  "schedules-fp32-d128-onehot",
  "schedules-fp32-d256-onehot",
  "schedules-fp64-d128",
  "schedules-fp64-d128-onehot",
  "schedules-fp64-d256-onehot",
]
all-schedules = [
  "schedules-default",
  "schedules-fp128-d64-onehot-recursive",
  "schedules-fp128-d64-onehot-tensor",
  "schedules-fp128-d64-onehot-multi-chunk",
  "schedules-fp128-d64-onehot-multi-chunk-w2r2",
  "schedules-fp128-d64-onehot-multi-chunk-w4r2",
  "schedules-fp128-d64-full-multi-chunk",
]
schedules-fp128-d64-onehot = [
  "dep:akita-schedules",
  "akita-schedules/fp128-d64-onehot",
]
schedules-fp128-d64-onehot-recursive = [
  "dep:akita-schedules",
  "akita-schedules/fp128-d64-onehot-recursive",
]
schedules-fp128-d64-full = [
  "dep:akita-schedules",
  "akita-schedules/fp128-d64-full",
]
schedules-fp128-d128-onehot = [
  "dep:akita-schedules",
  "akita-schedules/fp128-d128-onehot",
]
schedules-fp128-d128-full = [
  "dep:akita-schedules",
  "akita-schedules/fp128-d128-full",
]
schedules-fp128-d64-onehot-tensor = [
  "dep:akita-schedules",
  "akita-schedules/fp128-d64-onehot-tensor",
]
schedules-fp128-d64-onehot-multi-chunk = [
  "dep:akita-schedules",
  "akita-schedules/fp128-d64-onehot-multi-chunk",
]
schedules-fp128-d64-onehot-multi-chunk-w2r2 = [
  "dep:akita-schedules",
  "akita-schedules/fp128-d64-onehot-multi-chunk-w2r2",
]
schedules-fp128-d64-onehot-multi-chunk-w4r2 = [
  "dep:akita-schedules",
  "akita-schedules/fp128-d64-onehot-multi-chunk-w4r2",
]
schedules-fp128-d64-full-multi-chunk = [
  "dep:akita-schedules",
  "akita-schedules/fp128-d64-full-multi-chunk",
]

schedules-fp32-d128-onehot = [
  "dep:akita-schedules",
  "akita-schedules/fp32-d128-onehot",
]
schedules-fp32-d256-onehot = [
  "dep:akita-schedules",
  "akita-schedules/fp32-d256-onehot",
]
schedules-fp64-d128 = ["dep:akita-schedules", "akita-schedules/fp64-d128"]
schedules-fp64-d128-onehot = [
  "dep:akita-schedules",
  "akita-schedules/fp64-d128-onehot",
]
schedules-fp64-d256-onehot = [
  "dep:akita-schedules",
  "akita-schedules/fp64-d256-onehot",
]

[dependencies]
akita-challenges = { version = "0.1.0", path = "../akita-challenges" }
akita-field = { version = "0.1.0", path = "../akita-field" }
akita-planner = { version = "0.1.0", path = "../akita-planner" }
akita-schedules = { version = "0.1.0", path = "../akita-schedules", optional = true, default-features = false }
akita-serialization = { version = "0.1.0", path = "../akita-serialization" }
akita-transcript = { version = "0.1.0", path = "../akita-transcript" }
akita-types = { version = "0.1.0", path = "../akita-types" }
tracing = "0.1"

[[bin]]
name = "gen_schedule_tables"
path = "src/bin/gen_schedule_tables.rs"

[[test]]
name = "schedule_catalog_miswire"
path = "tests/schedule_catalog_miswire.rs"
required-features = ["schedules-fp128-d64-onehot", "schedules-fp128-d64-full"]

[[test]]
name = "generated_tables"
path = "tests/generated_tables.rs"
required-features = ["all-schedules"]

[lints]
workspace = true
