[package]
name = "akita-field"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
authors = [
  "Markos Georghiades <mgeorghiades@a16z.com>",
  "Quang Dao <qvd@andrew.cmu.edu>",
  "Amirhossein Khajehpour <amir.kh@layerzerolabs.org>",
  "Omid Bodaghi <omibo@layerzero.foundation>",
  "Giuseppe Vitto <giuseppe.vitto@layerzerolabs.org>",
]
license = "Apache-2.0 OR MIT"
description = "Field traits and concrete fields for the Akita polynomial commitment scheme"
repository = "https://github.com/LayerZero-Labs/akita"
readme = "../../README.md"

[dependencies]
akita-serialization = { version = "0.1.0", path = "../akita-serialization" }
jolt-field = { git = "https://github.com/a16z/jolt", rev = "2509bdcea9bb3e8978bb578380383ef06dbbada7", default-features = false }
num-traits = "0.2"
rand_core = { version = "0.6", features = ["getrandom"] }
rayon = { version = "1.12", optional = true }
thiserror = "2.0"

[dev-dependencies]
jolt-transcript = { git = "https://github.com/a16z/jolt", rev = "2509bdcea9bb3e8978bb578380383ef06dbbada7", default-features = false }
rand = "0.8"

[features]
default = []
parallel = ["dep:rayon"]
zk = []

[lints]
workspace = true
