[package]
name = "akita-metal"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
authors = [
  "Markos Georghiades <mgeorghiades@a16z.com>",
  "Quang Dao <qvd@andrew.cmu.edu>",
  "Amirhossein Khajehpour <amir.kh@layerzerolabs.org>",
  "Omid Bodaghi <omibo@layerzero.foundation>",
  "Giuseppe Vitto <giuseppe.vitto@layerzerolabs.org>",
]
license = "Apache-2.0 OR MIT"
description = "Apple Metal kernels and runtime helpers for Akita compute backends"
repository = "https://github.com/LayerZero-Labs/akita"
readme = "README.md"

[dependencies]
akita-field = { version = "0.1.0", path = "../akita-field" }
thiserror = "2.0"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.33"
objc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []

[[bench]]
name = "fp128_vector"
harness = false

[lints]
workspace = true
