[package]
name = "akita-pcs"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
authors = [
  "Markos Georghiades <mgeorghiades@a16z.com>",
  "Quang Dao <qvd@andrew.cmu.edu>",
  "Amirhossein Khajehpour <amir.kh@layerzerolabs.org>",
  "Omid Bodaghi <omibo@layerzero.foundation>",
  "Giuseppe Vitto <giuseppe.vitto@layerzerolabs.org>",
]
license = "Apache-2.0 OR MIT"
description = "A high performance and modular implementation of the Akita polynomial commitment scheme."
repository = "https://github.com/LayerZero-Labs/akita"
documentation = "https://docs.rs/akita-pcs"
readme = "../../README.md"
keywords = [
  "cryptography",
  "zkp",
  "commitment",
  "polynomial",
  "pcs",
  "lattice",
  "post-quantum",
]
categories = ["cryptography", "algorithms"]
include = ["src/**", "examples/**", "benches/**", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true

[package.metadata.cargo-machete]
ignored = ["akita-setup"]

[features]
default = ["parallel", "schedules-default"]
parallel = [
  "dep:rayon",
  "akita-algebra/parallel",
  "akita-field/parallel",
  "akita-prover/parallel",
  "akita-setup/parallel",
  "akita-sumcheck/parallel",
  "akita-verifier/parallel",
]
schedules-default = ["akita-config/schedules-default"]
profile-ci = [
  "profile-ci-registry",
  "mode-dense-fp128-d64",
  "mode-onehot-fp128-d64",
  "mode-onehot-fp128-d64-tensor",
  "mode-onehot-fp128-d64-multi-chunk-w2r2",
  "mode-onehot-fp128-d64-multi-chunk-w4r2",
  "mode-onehot-fp128-d64-multi-chunk-w8r2",
  "mode-onehot-fp32-d128",
  "mode-onehot-fp64-d128",
]
# Selects the CI mode registry in examples/profile/modes.rs (a curated,
# individually-gated subset) instead of the full local-dev registry. CI jobs
# enable this plus only the `mode-*` features their matrix cases exercise, so
# unused generic prover/verifier instantiations are never monomorphized.
profile-ci-registry = []
# Each mirrors one CI profile mode in examples/profile/modes.rs. Forwards to
# the existing akita-config schedule-table feature so the mode's
# `CommitmentConfig::runtime_schedule` has data to look up.
mode-dense-fp128-d64 = ["akita-config/schedules-fp128-d64-full"]
mode-onehot-fp128-d64 = ["akita-config/schedules-fp128-d64-onehot"]
mode-onehot-fp128-d64-tensor = ["akita-config/schedules-fp128-d64-onehot-tensor"]
mode-onehot-fp128-d64-multi-chunk-w2r2 = [
  "akita-config/schedules-fp128-d64-onehot-multi-chunk-w2r2",
]
mode-onehot-fp128-d64-multi-chunk-w4r2 = [
  "akita-config/schedules-fp128-d64-onehot-multi-chunk-w4r2",
]
mode-onehot-fp128-d64-multi-chunk-w8r2 = [
  "akita-config/schedules-fp128-d64-onehot-multi-chunk",
]
mode-onehot-fp32-d128 = ["akita-config/schedules-fp32-d128-onehot"]
mode-onehot-fp64-d128 = ["akita-config/schedules-fp64-d128-onehot"]
disk-persistence = ["akita-setup/disk-persistence"]
logging-transcript = [
  "akita-transcript/logging-transcript",
  "akita-prover/logging-transcript",
]

[dependencies]
akita-algebra = { version = "0.1.0", path = "../akita-algebra" }
akita-challenges = { version = "0.1.0", path = "../akita-challenges" }
akita-config = { version = "0.1.0", path = "../akita-config", default-features = false }
akita-field = { version = "0.1.0", path = "../akita-field" }
akita-serialization = { version = "0.1.0", path = "../akita-serialization" }
akita-sumcheck = { version = "0.1.0", path = "../akita-sumcheck" }
akita-transcript = { version = "0.1.0", path = "../akita-transcript" }
akita-types = { version = "0.1.0", path = "../akita-types" }
akita-verifier = { version = "0.1.0", path = "../akita-verifier", default-features = false }
akita-prover = { version = "0.1.0", path = "../akita-prover", default-features = false }
akita-setup = { version = "0.1.0", path = "../akita-setup", default-features = false }
tracing = "0.1"
rayon = { version = "1.10", optional = true }

[dev-dependencies]
# Test/example-only: pull in `akita-config`'s test-support layout helpers
# (e.g. `test_support::akita_batched_root_layout`). Examples resolve this
# dev-dependency edge, so do not enable schedule-table features here: Cargo
# feature unification would link those tables into the profile-ci binary
# (`--no-default-features --features profile-ci`), failing
# `scripts/check_profile_ci_linkage.sh`. Tests that need extra tables rely
# on `default = ["schedules-default"]` or explicit `required-features`.
akita-config = { version = "0.1.0", path = "../akita-config", default-features = false, features = [
  "test-support",
] }
akita-planner = { version = "0.1.0", path = "../akita-planner" }
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
criterion = { version = "0.5", features = ["html_reports"] }
num-bigint = "0.4.6"
proptest = "1.6"
ark-bn254 = { git = "https://github.com/arkworks-rs/algebra", rev = "3b2a12492cfeb34774a2cdbe9d8d7a869c883fa9", features = [
  "scalar_field",
] }
ark-ff = { git = "https://github.com/arkworks-rs/algebra", rev = "3b2a12492cfeb34774a2cdbe9d8d7a869c883fa9" }
p3-field = "=0.5.3"
p3-mersenne-31 = "=0.5.3"
p3-baby-bear = "=0.5.3"
p3-koala-bear = "=0.5.3"
tracing-chrome = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }

[[example]]
name = "profile"
path = "examples/profile/main.rs"

[[bench]]
name = "ring_ntt"
harness = false

[[bench]]
name = "field_arith"
harness = false

[[bench]]
name = "akita_e2e"
harness = false

[[bench]]
name = "root_kernels"
harness = false

[[bench]]
name = "extension_opening_reduction"
harness = false

[[bench]]
name = "onehot_root_projection_commit"
harness = false

[[bench]]
name = "fft_smooth"
harness = false

[lints]
workspace = true
