[package]
name = "akita-pcs"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
authors = [
  "Markos Georghiades <mgeorghiades@a16z.com>",
  "Quang Dao <qvd@andrew.cmu.edu>",
  "Amirhossein Khajehpour <amir.kh@layerzerolabs.org>",
  "Omid Bodaghi <omibo@layerzero.foundation>",
  "Giuseppe Vitto <giuseppe.vitto@layerzerolabs.org>",
]
license = "Apache-2.0 OR MIT"
description = "A high performance and modular implementation of the Akita polynomial commitment scheme."
repository = "https://github.com/LayerZero-Labs/akita"
documentation = "https://docs.rs/akita-pcs"
readme = "../../README.md"
keywords = [
  "cryptography",
  "zkp",
  "commitment",
  "polynomial",
  "pcs",
  "lattice",
  "post-quantum",
]
categories = ["cryptography", "algorithms"]
include = ["src/**", "examples/**", "benches/**", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true

[package.metadata.cargo-machete]
ignored = ["akita-setup"]

[features]
default = ["parallel", "schedules-default"]
parallel = [
  "dep:rayon",
  "akita-algebra/parallel",
  "akita-field/parallel",
  "akita-prover/parallel",
  "akita-setup/parallel",
  "akita-sumcheck/parallel",
  "akita-verifier/parallel",
  # TEMPORARY: keep the frozen legacy verifier on the same parallel setting as
  # the live one so verifier_differential.rs compares like-for-like. Removed
  # with the crate at the end of the refactor Phase 3.
  "akita-verifier-legacy/parallel",
]
schedules-default = ["akita-config/schedules-default"]
profile-ci = [
  "akita-config/schedules-fp32-d128-onehot",
  "akita-config/schedules-fp64-d128-onehot",
  "akita-config/schedules-fp128-d64-onehot",
  "akita-config/schedules-fp128-d64-onehot-recursive",
  "akita-config/schedules-fp128-d64-onehot-tensor",
  "akita-config/schedules-fp128-d64-full",
  "akita-config/schedules-fp128-d64-onehot-multi-chunk",
  "akita-config/schedules-fp128-d64-onehot-multi-chunk-w2r2",
  "akita-config/schedules-fp128-d64-onehot-multi-chunk-w4r2",
]
# Compile the profile example with only the singleton fp128 D64 one-hot
# configuration. Run with `--no-default-features` so unrelated schedule tables
# and profile-mode monomorphizations stay out of the binary.
profile-onehot-fp128-d64 = ["akita-config/schedules-fp128-d64-onehot"]
disk-persistence = ["akita-setup/disk-persistence"]
logging-transcript = [
  "akita-transcript/logging-transcript",
  "akita-prover/logging-transcript",
]

[dependencies]
akita-algebra = { version = "0.1.0", path = "../akita-algebra" }
akita-challenges = { version = "0.1.0", path = "../akita-challenges" }
akita-config = { version = "0.1.0", path = "../akita-config", default-features = false }
akita-field = { version = "0.1.0", path = "../akita-field" }
akita-serialization = { version = "0.1.0", path = "../akita-serialization" }
akita-sumcheck = { version = "0.1.0", path = "../akita-sumcheck" }
akita-transcript = { version = "0.1.0", path = "../akita-transcript" }
akita-types = { version = "0.1.0", path = "../akita-types" }
akita-verifier = { version = "0.1.0", path = "../akita-verifier", default-features = false }
akita-prover = { version = "0.1.0", path = "../akita-prover", default-features = false }
akita-setup = { version = "0.1.0", path = "../akita-setup", default-features = false }
tracing = "0.1"
rayon = { version = "1.10", optional = true }

[dev-dependencies]
# Test/example-only: pull in `akita-config`'s test-support layout helpers
# (e.g. `test_support::akita_batched_root_layout`). Examples resolve this
# dev-dependency edge, so do not enable schedule-table features here: Cargo
# feature unification would link those tables into the profile-ci binary
# (`--no-default-features --features profile-ci`), failing
# `scripts/check_profile_ci_linkage.sh`. Tests that need extra tables rely
# on `default = ["schedules-default"]` or explicit `required-features`.
akita-config = { version = "0.1.0", path = "../akita-config", default-features = false, features = [
  "test-support",
] }
akita-planner = { version = "0.1.0", path = "../akita-planner" }
# TEMPORARY: frozen pre-refactor verifier snapshot, used only by
# tests/verifier_differential.rs as the parity oracle for the akita-verifier
# refactor. Removed at the end of Phase 3.
akita-verifier-legacy = { version = "0.1.0", path = "../akita-verifier-legacy", default-features = false }
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
criterion = { version = "0.5", features = ["html_reports"] }
num-bigint = "0.4.6"
proptest = "1.6"
ark-bn254 = { git = "https://github.com/arkworks-rs/algebra", rev = "3b2a12492cfeb34774a2cdbe9d8d7a869c883fa9", features = [
  "scalar_field",
] }
ark-ff = { git = "https://github.com/arkworks-rs/algebra", rev = "3b2a12492cfeb34774a2cdbe9d8d7a869c883fa9" }
p3-field = "=0.5.3"
p3-mersenne-31 = "=0.5.3"
p3-baby-bear = "=0.5.3"
p3-koala-bear = "=0.5.3"
tracing-chrome = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }

[[example]]
name = "profile"
path = "examples/profile/main.rs"

[[bench]]
name = "ring_ntt"
harness = false

[[bench]]
name = "field_arith"
harness = false

[[bench]]
name = "akita_e2e"
harness = false

[[bench]]
name = "root_kernels"
harness = false

[[bench]]
name = "digit_range"
harness = false

[[bench]]
name = "extension_opening_reduction"
harness = false

[[bench]]
name = "onehot_root_projection_commit"
harness = false

[[bench]]
name = "fft_smooth"
harness = false

[[bench]]
name = "setup_index_weight"
harness = false

[lints]
workspace = true
